// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`statsOutput statsOutput/auxiliary-files-test should print correct stats for 1`] = `
PublicPath: auto
asset bundle.js xx KiB {889} [emitted] (name: main)
asset 98396dbfd5c74c34.png 7 bytes ({889}) [emitted] [immutable] [from: raw.png] (auxiliary name: main)
Entrypoint main xx KiB (7 bytes) = bundle.js xx KiB (98396dbfd5c74c34.png 7 bytes)
chunk {889} (runtime: main) bundle.js (main) 7 bytes (asset) 159 bytes (javascript) xx KiB (runtime) [entry] [rendered]
  > ./index main
  ./index.js + 1 modules [765] 117 bytes {889} [depth 0] [code generated]
    [no exports]
    [no exports used]
    entry ./index
    | ./index.js 75 bytes [depth 0] [orphan] [dependent] [built]
    |   [no exports]
    |   [no exports used]
    |   ModuleConcatenation bailout: Module is an entry point
    | ./raw.png [970] 42 bytes (javascript) 7 bytes (asset) {889} [depth 1] [built] [code generated]
    |   [exports: default]
    |   [no exports used]
    |   esm import ./raw.png ./index.js 2:0-33
  ./raw.png [970] 42 bytes (javascript) 7 bytes (asset) {889} [depth 1] [built] [code generated]
    [exports: default]
    [no exports used]
    esm import ./raw.png ./index.js 2:0-33
modules by path ./ 235 bytes (javascript) 7 bytes (asset)
  orphan modules 76 bytes [orphan]
    ./index.js 75 bytes [depth 0] [orphan] [built]
      [no exports]
      [no exports used]
      ModuleConcatenation bailout: Module is an entry point
    ./stringModule.js 1 bytes [depth 1] [orphan] [built]
      [module unused]
      ModuleConcatenation bailout: Module is not an ECMAScript module
      esm import ./stringModule [765] ./index.js 1:0-41
  code generated modules 159 bytes (javascript) 7 bytes (asset) [code generated]
    ./index.js + 1 modules [765] 117 bytes {889} [depth 0] [code generated]
      [no exports]
      [no exports used]
      entry ./index
      | ./index.js 75 bytes [depth 0] [orphan] [built]
      |   [no exports]
      |   [no exports used]
      |   ModuleConcatenation bailout: Module is an entry point
      | ./raw.png [970] 42 bytes (javascript) 7 bytes (asset) {889} [depth 1] [built] [code generated]
      |   [exports: default]
      |   [no exports used]
      |   esm import ./raw.png ./index.js 2:0-33
    ./raw.png [970] 42 bytes (javascript) 7 bytes (asset) {889} [depth 1] [built] [code generated]
      [exports: default]
      [no exports used]
      esm import ./raw.png ./index.js 2:0-33
runtime modules xx KiB
  webpack/runtime/auto_public_path xx KiB {889} [code generated]
    [no exports]
    [used exports unknown]
  webpack/runtime/global 216 bytes {889} [code generated]
    [no exports]
    [used exports unknown]
  
Rspack compiled successfully (97e4ff8d4fa12b75)
`;

exports[`statsOutput statsOutput/builtin-swc-loader-parse-error should print correct stats for 1`] = `
ERROR in ./index.ts
  × Module build failed:
  ├─▶   ×   x Expected '{', got 'error'
  │     │    ,-[<TEST_TOOLS_ROOT>/tests/statsOutputCases/builtin-swc-loader-parse-error/index.ts<LINE_COL>]
  │     │  1 | export error;
  │     │    :        ^^^^^
  │     │    \`----
  │     │
  │   
  ╰─▶   × Syntax Error

Rspack compiled with 1 error
`;

exports[`statsOutput statsOutput/concatenated-modules should print correct stats for 1`] = `
asset main.js 234 bytes [emitted] (name: main)
orphan modules 141 bytes [orphan] 4 modules
./index.js + 3 modules 141 bytes [code generated]
Rspack x.x.x compiled successfully in X s
`;

exports[`statsOutput statsOutput/css-concat should print correct stats for 1`] = `
asset main.js xx KiB [emitted] (name: main)
asset main.css 24 bytes [emitted] (name: main)
Entrypoint main xx KiB = main.js xx KiB main.css 24 bytes
runtime modules xx KiB 6 modules
cacheable modules 62 bytes (javascript) 23 bytes (css)
  ./index.js 20 bytes [built] [code generated]
  ./foo.css 42 bytes (javascript) 23 bytes (css) [built] [code generated]
Rspack x.x.x compiled successfully in X s
`;

exports[`statsOutput statsOutput/filename should print correct stats for 1`] = `
asset 889.xxxx.js xx KiB [emitted] (name: main)
asset 769.xxxx.js 320 bytes [emitted]
runtime modules xx KiB 11 modules
cacheable modules 70 bytes
  ./index.js 38 bytes [built] [code generated]
  ./dynamic.js 32 bytes [built] [code generated]
Rspack x.x.x compiled successfully in X s
`;

exports[`statsOutput statsOutput/hot+production should print correct stats for 1`] = `
asset main.js xx KiB [emitted] (name: main)
runtime modules xx KiB 12 modules
./index.js 25 bytes [built] [code generated]
Rspack x.x.x compiled successfully in X s
`;

exports[`statsOutput statsOutput/ignore-plugin should print correct stats for 1`] = `
runtime modules 88 bytes 1 module
./index.js 103 bytes [built] [code generated]
<TEST_TOOLS_ROOT>/tests/statsOutputCases/ignore-plugin/locals|sync|/^\\.\\/.*$/ 160 bytes [built] [code generated]
./locals/en.js 30 bytes [built] [code generated]
`;

exports[`statsOutput statsOutput/ignore-warning should print correct stats for 1`] = `Rspack compiled successfully`;

exports[`statsOutput statsOutput/issue-3558 should print correct stats for 1`] = `Rspack compiled successfully`;

exports[`statsOutput statsOutput/legacy-ie-css-warning should print correct stats for 1`] = `Rspack compiled successfully`;

exports[`statsOutput statsOutput/let-keyword-as-variable-name-error should print correct stats for 1`] = `
ERROR in ./index.js
  × Module parse failed:
  ╰─▶   × JavaScript parse error: Unexpected token \`let\`. Expected let is reserved in const, let, class declaration
         ╭────
       1 │ let let = let;
         ·     ───
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.

Rspack compiled with 1 error
`;

exports[`statsOutput statsOutput/limit-chunk-count-plugin should print correct stats for 1`] = `
1 chunks:
  asset bundle1.js xx KiB [emitted] (name: main)
  chunk (runtime: main) bundle1.js (main) 219 bytes (javascript) xx KiB (runtime) <{889}> >{889}< [entry] [rendered]
    dependent modules 96 bytes [dependent] 4 modules
    ./index.js 123 bytes [built] [code generated]
  1 chunks (Rspack x.x.x) compiled successfully in X s

2 chunks:
  asset bundle2.js xx KiB [emitted] (name: main)
  asset 907.bundle2.js 494 bytes [emitted] (name: c)
  chunk (runtime: main) bundle2.js (main) 145 bytes (javascript) xx KiB (runtime) >{907}< [entry] [rendered]
    dependent modules 22 bytes [dependent] 1 module
    ./index.js 123 bytes [built] [code generated]
  chunk (runtime: main) 907.bundle2.js (c) 74 bytes <{889}> <{907}> >{907}< [rendered]
    dependent modules 44 bytes [dependent] 2 modules
    ./c.js 30 bytes [built] [code generated]
  2 chunks (Rspack x.x.x) compiled successfully in X s

3 chunks:
  asset bundle3.js xx KiB [emitted] (name: main)
  asset 907.bundle3.js 386 bytes [emitted] (name: c)
  asset 719.bundle3.js 182 bytes [emitted]
  chunk (runtime: main) 719.bundle3.js 44 bytes <{907}> [rendered]
    ./d.js 22 bytes [built] [code generated]
    ./e.js 22 bytes [built] [code generated]
  chunk (runtime: main) bundle3.js (main) 145 bytes (javascript) xx KiB (runtime) >{907}< [entry] [rendered]
    dependent modules 22 bytes [dependent] 1 module
    ./index.js 123 bytes [built] [code generated]
  chunk (runtime: main) 907.bundle3.js (c) 30 bytes <{889}> >{719}< [rendered]
    ./c.js 30 bytes [built] [code generated]
  3 chunks (Rspack x.x.x) compiled successfully in X s

4 chunks:
  asset bundle4.js xx KiB [emitted] (name: main)
  asset 907.bundle4.js 386 bytes [emitted] (name: c)
  asset 266.bundle4.js 128 bytes [emitted]
  asset 327.bundle4.js 128 bytes [emitted]
  chunk (runtime: main) 266.bundle4.js 22 bytes <{907}> [rendered]
    ./d.js 22 bytes [built] [code generated]
  chunk (runtime: main) 327.bundle4.js 22 bytes <{907}> [rendered]
    ./e.js 22 bytes [built] [code generated]
  chunk (runtime: main) bundle4.js (main) 145 bytes (javascript) xx KiB (runtime) >{907}< [entry] [rendered]
    dependent modules 22 bytes [dependent] 1 module
    ./index.js 123 bytes [built] [code generated]
  chunk (runtime: main) 907.bundle4.js (c) 30 bytes <{889}> >{266}< >{327}< [rendered]
    ./c.js 30 bytes [built] [code generated]
  4 chunks (Rspack x.x.x) compiled successfully in X s
`;

exports[`statsOutput statsOutput/logging-loader should print correct stats for 1`] = `
DEBUG LOG from TestLoader|<TEST_TOOLS_ROOT>/tests/statsOutputCases/logging-loader/index.js
<-> group
  <i> info something
      log something
    -------
`;

exports[`statsOutput statsOutput/match-resource-data-url should print correct stats for 1`] = `
runtime modules 647 bytes 3 modules
./index.js 150 bytes [built] [code generated]
./a.js!=!data:javascript,var __looooooooo.. 98 bytes [built] [code generated]
`;

exports[`statsOutput statsOutput/minify-error should print correct stats for 1`] = `
ERROR in main.js
  × Chunk minification failed:
  ╰─▶   × JavaScript parse error: 'const' declarations must be initialized
         ╭─[1:6]
       1 │ const a {}
         ·       ─
       2 │ (() => { // webpackBootstrap
       3 │ console.log(0);
         ╰────

ERROR in main.js
  × Chunk minification failed:
  ╰─▶   × JavaScript parse error: Expected a semicolon
         ╭─[1:8]
       1 │ const a {}
         ·         ─
       2 │ (() => { // webpackBootstrap
       3 │ console.log(0);
         ╰────

Rspack compiled with 2 errors
`;

exports[`statsOutput statsOutput/named-chunk-group should print correct stats for 1`] = `
Entrypoint main xx KiB = main.js
Chunk Group cimanyd 319 bytes = cimanyd.js
`;

exports[`statsOutput statsOutput/nonexistent-import-source-error should print correct stats for 1`] = `
ERROR in ./index.js 1:0-19
  × Module not found: Can't resolve 'not-exist' in '<TEST_TOOLS_ROOT>/tests/statsOutputCases/nonexistent-import-source-error'
   ╭────
 1 │ import "not-exist";
   · ───────────────────
   ╰────

Rspack compiled with 1 error
`;

exports[`statsOutput statsOutput/optimization-chunk-ids-natural should print correct stats for 1`] = `
Entrypoint e1 xx KiB = e1.js
Entrypoint e2 xx KiB = e2.js
chunk (runtime: e1) 0.js 52 bytes [rendered]
chunk (runtime: e1) 1.js 24 bytes [rendered]
chunk (runtime: e1, e2) 2.js 22 bytes [rendered]
chunk (runtime: e1) e1.js (e1) 74 bytes (javascript) xx KiB (runtime) [entry] [rendered]
chunk (runtime: e2) e2.js (e2) 51 bytes (javascript) xx KiB (runtime) [entry] [rendered]
`;

exports[`statsOutput statsOutput/optimization-runtime-chunk should print correct stats for 1`] = `
Entrypoint e1 xx KiB = e1~runtime.js xx KiB e1.js 458 bytes
Entrypoint e2 xx KiB = e2~runtime.js xx KiB e2.js 458 bytes
chunk (runtime: e1~runtime) e1.js (e1) 27 bytes [entry] [rendered]
chunk (runtime: e1~runtime) e1~runtime.js (e1~runtime) xx KiB [initial] [rendered]
chunk (runtime: e2~runtime) e2.js (e2) 27 bytes [entry] [rendered]
chunk (runtime: e2~runtime) e2~runtime.js (e2~runtime) xx KiB [initial] [rendered]
`;

exports[`statsOutput statsOutput/optimization-runtime-chunk-multiple should print correct stats for 1`] = `
Entrypoint e1 xx KiB = runtime~e1.js xx KiB e1.js 458 bytes
Entrypoint e2 xx KiB = runtime~e2.js xx KiB e2.js 458 bytes
chunk (runtime: runtime~e1) e1.js (e1) 27 bytes [entry] [rendered]
chunk (runtime: runtime~e2) e2.js (e2) 27 bytes [entry] [rendered]
chunk (runtime: runtime~e1) runtime~e1.js (runtime~e1) xx KiB [initial] [rendered]
chunk (runtime: runtime~e2) runtime~e2.js (runtime~e2) xx KiB [initial] [rendered]
`;

exports[`statsOutput statsOutput/optimization-runtime-chunk-single should print correct stats for 1`] = `
Entrypoint e1 xx KiB = runtime.js xx KiB e1.js 458 bytes
Entrypoint e2 xx KiB = runtime.js xx KiB e2.js 458 bytes
chunk (runtime: runtime) e1.js (e1) 27 bytes [entry] [rendered]
chunk (runtime: runtime) e2.js (e2) 27 bytes [entry] [rendered]
chunk (runtime: runtime) runtime.js (runtime) xx KiB [initial] [rendered]
`;

exports[`statsOutput statsOutput/optimization-runtime-chunk-true should print correct stats for 1`] = `
Entrypoint e1 xx KiB = runtime~e1.js xx KiB e1.js 458 bytes
Entrypoint e2 xx KiB = runtime~e2.js xx KiB e2.js 458 bytes
chunk (runtime: runtime~e1) e1.js (e1) 27 bytes [entry] [rendered]
chunk (runtime: runtime~e2) e2.js (e2) 27 bytes [entry] [rendered]
chunk (runtime: runtime~e1) runtime~e1.js (runtime~e1) xx KiB [initial] [rendered]
chunk (runtime: runtime~e2) runtime~e2.js (runtime~e2) xx KiB [initial] [rendered]
`;

exports[`statsOutput statsOutput/parse-error should print correct stats for 1`] = `
ERROR in ./b.js
  × Module parse failed:
  ╰─▶   × JavaScript parse error: Expected ';', '}' or <eof>
         ╭─[6:7]
       4 │ includes
       5 │ a
       6 │ parser )
         ·        ─
       7 │ error
       8 │ in
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.

Rspack compiled with 1 error
`;

exports[`statsOutput statsOutput/performance-disabled should print correct stats for 1`] = `
asset main.js xx KiB [emitted] (name: main)
asset 266.js 128 bytes [emitted]
asset 327.js 128 bytes [emitted]
Entrypoint main xx KiB = main.js
runtime modules xx KiB 12 modules
cacheable modules xx KiB
  ./index.js 49 bytes [built] [code generated]
  ./a.js xx KiB [built] [code generated]
  ./b.js 22 bytes [built] [code generated]
  ./c.js 28 bytes [built] [code generated]
  ./d.js 22 bytes [built] [code generated]
  ./e.js 22 bytes [built] [code generated]
Rspack x.x.x compiled successfully in X s
`;

exports[`statsOutput statsOutput/performance-error should print correct stats for 1`] = `
asset main.js xx KiB [emitted] [big] (name: main)
asset 266.js 128 bytes [emitted]
asset 327.js 128 bytes [emitted]
Entrypoint main [big] xx KiB = main.js
runtime modules xx KiB 12 modules
cacheable modules xx KiB
  ./index.js 48 bytes [built] [code generated]
  ./a.js xx KiB [built] [code generated]
  ./b.js 22 bytes [built] [code generated]
  ./c.js 28 bytes [built] [code generated]
  ./d.js 22 bytes [built] [code generated]
  ./e.js 22 bytes [built] [code generated]

ERROR in × asset size limit: The following asset(s) exceed the recommended size limit (xx KiB). This can impact web performance.Assets:
  │   main.js (xx KiB)


ERROR in × entrypoint size limit: The following entrypoint(s) combined asset size exceeds the recommended limit (xx KiB). This can impact web performance.Entrypoints:
  │   main (xx KiB)
  │       main.js


Rspack x.x.x compiled with 2 errors in X s
`;

exports[`statsOutput statsOutput/performance-no-hints should print correct stats for 1`] = `
asset main.js xx KiB [emitted] [big] (name: main)
asset 266.js 128 bytes [emitted]
asset 327.js 128 bytes [emitted]
Entrypoint main [big] xx KiB = main.js
runtime modules xx KiB 12 modules
cacheable modules xx KiB
  ./index.js 48 bytes [built] [code generated]
  ./a.js xx KiB [built] [code generated]
  ./b.js 22 bytes [built] [code generated]
  ./c.js 28 bytes [built] [code generated]
  ./d.js 22 bytes [built] [code generated]
  ./e.js 22 bytes [built] [code generated]
Rspack x.x.x compiled successfully in X s
`;

exports[`statsOutput statsOutput/prefetch-preload-mixed should print correct stats for 1`] = `
chunk (runtime: main) c1.js (c1) 1 bytes <{907}> [rendered]
chunk (runtime: main) a.js (a) 136 bytes <{889}> >{934}< >{987}< (prefetch: {934} {987}) [rendered]
chunk (runtime: main) b.js (b) 203 bytes <{889}> >{685}< >{899}< >{940}< (prefetch: {685} {899}) (preload: {940}) [rendered]
chunk (runtime: main) b1.js (b1) 1 bytes <{364}> [rendered]
chunk (runtime: main) main.js (main) 195 bytes (javascript) xx KiB (runtime) >{341}< >{364}< >{907}< (prefetch: {341} {364} {907}) [entry] [rendered]
chunk (runtime: main) b3.js (b3) 1 bytes <{364}> [rendered]
chunk (runtime: main) c.js (c) 134 bytes <{889}> >{312}< >{993}< (preload: {312} {993}) [rendered]
chunk (runtime: main) a1.js (a1) 1 bytes <{341}> [rendered]
chunk (runtime: main) b2.js (b2) 1 bytes <{364}> [rendered]
chunk (runtime: main) a2.js (a2) 1 bytes <{341}> [rendered]
chunk (runtime: main) c2.js (c2) 1 bytes <{907}> [rendered]
`;

exports[`statsOutput statsOutput/reasons should print correct stats for 1`] = `
./index.js 44 bytes [built] [code generated]
  entry ./index
./a.js 55 bytes [built] [code generated]
  cjs self exports reference self ./a.js
  cjs require ./a ./index.js 1:18-23
`;

exports[`statsOutput statsOutput/resolve-overflow-error should print correct stats for 1`] = `
assets by status 348 bytes [cached] 1 asset
./index.js 51 bytes [built] [code generated] [1 error]

ERROR in ./index.js 1:0-34
  × Module not found: Can't resolve 'cycle-alias/a' in '<TEST_TOOLS_ROOT>/tests/statsOutputCases/resolve-overflow-error'
   ╭─[1:0]
 1 │ import { a } from "cycle-alias/a";
   · ──────────────────────────────────
 2 │ console.log(a);
   ╰────
  help: maybe it had cyclic aliases

Rspack x.x.x compiled with 1 error in X s
`;

exports[`statsOutput statsOutput/resolve-unexpected-exports-in-pkg-error should print correct stats for 1`] = `
asset bundle.js xx KiB [emitted] (name: main)
runtime modules 274 bytes 1 module
./index.js 39 bytes [built] [code generated] [1 error]

ERROR in ./index.js 1:0-22
  × Invalid "exports" target "../../index.js" defined for '.' in the package config <TEST_TOOLS_ROOT>/tests/statsOutputCases/resolve-unexpected-exports-in-pkg-error/node_modules/pkg-a/package.json

Rspack x.x.x compiled with 1 error in X s
`;

exports[`statsOutput statsOutput/runtime-modules should print correct stats for 1`] = `
./index.js 19 bytes [built] [code generated]
webpack/runtime/define_property_getters 285 bytes [code generated]
webpack/runtime/has_own_property 88 bytes [code generated]
webpack/runtime/make_namespace_object 274 bytes [code generated]
`;

exports[`statsOutput statsOutput/runtime-specific-exports should print correct stats for 1`] = `
asset main.js xx KiB [emitted] (name: main)
./example.js 70 bytes [built] [code generated]
  [no exports used]
./increment.js 251 bytes [built] [code generated]
  [exports: decrement, increment, incrementBy2]
  [only some exports used: increment]
./math.js 313 bytes [built] [code generated]
  [exports: add, multiply]
  [only some exports used: add]
Rspack x.x.x compiled successfully in X s
`;

exports[`statsOutput statsOutput/side-effects-bailouts should print correct stats for 1`] = `
asset main.js 177 bytes {889} [emitted] (name: main)
chunk {889} (runtime: main) main.js (main) 91 bytes [entry] [rendered]
orphan modules 91 bytes [orphan] 2 modules
./index.js + 1 modules [816] 91 bytes {889} [code generated]
  [no exports]
  [no exports used]
  entry ./index.js
  
Rspack x.x.x compiled successfully in X s
`;

exports[`statsOutput statsOutput/simple-export should print correct stats for 1`] = `
asset bundle.js xx KiB [emitted] (name: main)
runtime modules 647 bytes 3 modules
./index.js 26 bytes [built] [code generated]
Rspack x.x.x compiled successfully in X s
`;

exports[`statsOutput statsOutput/simple-module-source should print correct stats for 1`] = `
asset bundle.js 2 KiB [emitted] (name: main)
runtime modules 637 bytes 3 modules
orphan modules 1 bytes [orphan] 1 module
cacheable modules 82 bytes
  ./index.js 75 bytes [built] [code generated]
  ./raw.png 7 bytes [built] [code generated]
Rspack compiled successfully
`;

exports[`statsOutput statsOutput/stats-hooks should print correct stats for 1`] = `
asset main.js 69 bytes [emitted111] (name: main) [testA: aaaaaa]
./index.js 26 bytes [built] [code generated]
Rspack compiled successfully
`;

exports[`statsOutput statsOutput/try-require-module should print correct stats for 1`] = `
WARNING in ./index.js 2:12-30
  ⚠ Module not found: Can't resolve './missing-module' in '<TEST_TOOLS_ROOT>/tests/statsOutputCases/try-require-module'
   ╭─[2:4]
 1 │ try {
 2 │     require('./missing-module')
   ·     ───────────────────────────
 3 │ } catch (e) {
 4 │ 
   ╰────

Rspack compiled with 1 warning
`;

exports[`statsOutput statsOutput/try-require-resolve-module should print correct stats for 1`] = `
WARNING in ./index.js
  ⚠ Module not found: Can't resolve './missing-module' in '<TEST_TOOLS_ROOT>/tests/statsOutputCases/try-require-resolve-module'
   ╭─[2:20]
 1 │ try {
 2 │     require.resolve('./missing-module')
   ·                     ──────────────────
 3 │ } catch (e) {
 4 │ 
   ╰────

Rspack compiled with 1 warning
`;

exports[`statsOutput statsOutput/try-require-resolve-weak-module should print correct stats for 1`] = `
WARNING in ./index.js
  ⚠ Module not found: Can't resolve './missing-module' in '<TEST_TOOLS_ROOT>/tests/statsOutputCases/try-require-resolve-weak-module'
   ╭─[2:24]
 1 │ try {
 2 │     require.resolveWeak('./missing-module')
   ·                         ──────────────────
 3 │ } catch (e) {
 4 │ 
   ╰────

Rspack compiled with 1 warning
`;
